# BUSCO-Plot-Py

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
buscoplotpy/graphics/: chromoplot.py  chromosome.py  karyoplot.py  label.py  link.py  organism_busco_barplot.py  synteny.py
buscoplotpy/utils/: __init__.py  load_busco_fulltable.py  load_json_summary.py  load_metaeuk_coordinates.py
docs/: requirements.txt
docs/source/: buscoplotpy.graphics.rst  buscoplotpy.utils.rst  conf.py  functionalities.rst  index.rst  installation.rst  introduction.rst  tutorial.rst
src/: karyoplot.py  karyotype.tsv  load_busco_fulltable.py  organism_busco_plot.py  test.ipynb
src/buscoplotpy/: karyoplot.py  load_busco_fulltable.py  load_json_summary.py  organism_busco_plot.py
src/buscoplotpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/buscoplotpy/graphics/: chromosome.py  karyoplot.py  label.py  link.py  organism_busco_barplot.py  synteny.py
src/buscoplotpy/utils/: label.py  load_busco_fulltable.py  load_json_summary.py
